<resources>
    <string name="app_name">Todo List</string>
    <string name="add_button">추가</string>
    <string name="edit_text_hint">할 일을 입력하세요</string>
    <string name="content_description">삭제</string>
    <string name="content_description2">체크박스</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">로그인</string>
    <string name="goto_signup">회원가입 하러가기</string>
    <string name="signup_email">회원가입</string>
    <string name="signin_google">구글 계정을 통해 로그인</string>

    <string name="nav_calendar">Calendar</string>
    <string name="nav_todo">Todo</string>
    <string name="nav_profile">Profile</string>

    <string name="profile_text_name">test@test.com</string>
    <string name="profile_imageview_description">프로필 사진</string>
    <string name="profile_image_setting_button">사진 설정</string>
    <string name="logout_button">로그아웃</string>
</resources>