<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".fragmentClasses.ProfileFragment">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/profile_imageview_description" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/profile_image"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/profile_text_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_image_setting_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:layout_above="@id/logout_btn"
        android:background="#3E3E3E"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/profile_image_setting_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_alignParentBottom="true"
        android:background="#3E3E3E"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/logout_button" />

</RelativeLayout>